--- a/queue.yaml
+++ b/queue.yaml
@@ -7,3 +7,10 @@ queue:
   max_concurrent_requests: 5
   retry_parameters:
       task_retry_limit: 5
+
+- name: extract
+  target: batch
+  rate: 4/s
+  max_concurrent_requests: 5
+  retry_parameters:
+      task_retry_limit: 5
