--- a/batch.yaml
+++ b/batch.yaml
@@ -12,5 +12,7 @@ basic_scaling:
 handlers:
     - url: "/extract_text"
       script: batch.app
+    - url: "/import_all"
+      script: batch.app
     - url: "/import"
       script: batch.app
