--- a/queue.yaml
+++ b/queue.yaml
@@ -1,6 +1,15 @@
 # Set the total storage limit for all queues to 120MB
 total_storage_limit: 120M
 queue:
+- name: zips
+  target: batch
+  rate: 10/m
+  max_concurrent_requests: 1
+  retry_parameters:
+      task_retry_limit: 5
+      min_backoff_seconds: 30
+      max_backoff_seconds: 600
+
 - name: imports
   target: batch
   rate: 2/s
