--- a/app.yaml
+++ b/app.yaml
@@ -5,13 +5,21 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+libraries:
+    - name: jinja2
+      version: "2.6"
+
 includes:
     - mapreduce/include.yaml
 
 handlers:
-- url: "/static"
-  static_dir: static
+    - url: "/static"
+      static_dir: static
 
-- url: "/"
-  script: main.app
+    - url: "/favicon.ico"
+      static_files: "static/favicon.ico"
+      upload: "static/favicon.ico"
+
+    - url: "/"
+      script: main.app
 
