--- a/app.yaml
+++ b/app.yaml
@@ -20,6 +20,9 @@ handlers:
       static_files: "static/favicon.ico"
       upload: "static/favicon.ico"
 
+    - url: "/comment/(.*)/(.*)"
+      script: main.app
+
     - url: "/"
       script: main.app
 
