--- a/app.yaml
+++ b/app.yaml
@@ -15,10 +15,12 @@ includes:
 handlers:
     - url: "/static"
       static_dir: static
+      expiration: 30d
 
     - url: "/favicon.ico"
       static_files: "static/favicon.ico"
       upload: "static/favicon.ico"
+      expiration: 1d
 
     - url: "/comment/(.*)/(.*)"
       script: main.app
