--- a/batch.yaml
+++ b/batch.yaml
@@ -9,6 +9,10 @@ basic_scaling:
     max_instances: 5
     idle_timeout: 1m
 
+libraries:
+    - name: numpy
+      version: "1.6.1"
+
 handlers:
     - url: "/query"
       script: batch.app
