Add a mapreduce job to pre-compute summaries

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -13,3 +13,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: "datastore.Comment"
+- name: Summarize
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: main.summarize_doc
+    params:
+    - name: entity_kind
+      default: "datastore.Comment"
