Cleanup task queue handling

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,5 @@
 cron:
-- description: Pull latest batch
-  url: /import
-  target: batch
-  schedule: every 10 minutes
+    - description: Pull latest batch
+      url: /import?proceeding=14-28
+      target: batch
+      schedule: every 10 minutes
